# journalview

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: rust.yml
src/: jview_config.rs  jview_debug.rs  jview_help.rs  jview_logs.rs  jview_screen.rs  jview_search.rs  jview_selector.rs  main.rs
